--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -14,10 +14,18 @@
 
 FROM ubuntu:22.04
 
-ENV DOCKER_BUILDKIT=1
+RUN apt-get update && apt-get upgrade -y && \
+    apt-get install -y jq sudo curl wget git
 
-COPY scripts/*.sh /tmp/scripts/
-RUN find /tmp/scripts/ -type f -iname "*.sh" -exec chmod +x {} \;
-RUN apt-get update && \
-      apt-get -y install sudo
-RUN /bin/bash /tmp/scripts/container-set.sh
+# Create non-root user
+ARG USERNAME=vscode
+ARG USER_UID=4000
+ARG USER_GID=$USER_UID
+
+RUN groupadd --gid $USER_GID $USERNAME \
+    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
+    && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
+    && chmod 0440 /etc/sudoers.d/$USERNAME
+
+USER root
+WORKDIR /
