--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,42 +1,9 @@
-// This file is maintained by velocitas CLI, do not modify manually. Change settings in .velocitas.json
 {
-	"name": "Vehicle app template",
-	"build": {
-		"dockerfile": "Dockerfile"
-	},
-	"runArgs": [
-		"--init",
-		"--privileged"
-	],
-	"containerEnv": {
-		"GITHUB_API_TOKEN": "${localEnv:GITHUB_API_TOKEN}"
-	},
-	"customizations": {
-		"vscode": {
-			// Set *default* container specific settings.json values on container create.
-			"settings": {
-				"terminal.integrated.defaultProfile.linux": "zsh",
-				"terminal.integrated.profiles.linux": {
-					"zsh": {
-						"path": "/usr/bin/zsh"
-					}
-				}
-			},
-			// Add the IDs of extensions you want installed when the container is created.
-			"extensions": [
-				"dbaeumer.vscode-eslint",
-				"ms-azuretools.vscode-docker",
-				"cschleiden.vscode-github-actions",
-				"pspester.pester-test",
-				"rpdswtk.vsmqtt",
-				"dotjoshjohnson.xml",
-				"ms-kubernetes-tools.vscode-kubernetes-tools",
-				"matangover.mypy",
-				"augustocdias.tasks-shell-input"
-			]
-		}
-	},
-	"onCreateCommand": "bash .devcontainer/scripts/postCreateCommand.sh",
-	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+    "name": "Vehicle app template",
+    "build": {
+        "dockerfile": "Dockerfile",
+        "context": "../../.."
+    },
+    "features": {},
+	"onCreateCommand": "bash .devcontainer/scripts/postCreateCommand.sh"
 }
