--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -26,4 +26,9 @@ RUN groupadd --gid $USER_GID $USERNAME \
     && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
     && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
     && chmod 0440 /etc/sudoers.d/$USERNAME
+
+COPY scripts/*.sh /tmp/scripts/
+RUN find /tmp/scripts/ -type f -iname "*.sh" -exec chmod +x {} \;
+RUN /bin/bash /tmp/scripts/configure-proxies.sh
+
     
