--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,6 @@
 {
-    "name": "Vehicle app template",
-    "build": {
-        "dockerfile": "Dockerfile",
-    },
-	"onCreateCommand": "bash .devcontainer/scripts/postCreateCommand.sh",
-    "remoteUser": "vscode"
+    "name": "Vehicle App Template",
+    "image": "ghcr.io/eclipse-velocitas/devcontainer-base-images/base:v0.2",
+    "remoteUser": "vscode",
+    "postCreateCommand": "bash .devcontainer/scripts/posCreateCommand.sh"
 }
