--- a/.github/workflows/check-devcontainer.yml
+++ b/.github/workflows/check-devcontainer.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Run Linters
+        uses: ./.github/actions/pre-commit-action
+
       - name: Build devcontainer
         uses: devcontainers/ci@v0.3
         with:
