--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     rev: 5.12.0
     hooks:
       - id: isort
-        exclude: >s
+        exclude: >
           (?x)^(
               .*_pb2.py|
               .*_pb2.pyi|
