--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,73 +1,20 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.2.0
     hooks:
-    - id: trailing-whitespace
-    - id: end-of-file-fixer
-    - id: check-yaml
-    - id: check-added-large-files
-
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
+    -   id: trailing-whitespace
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+    -   id: check-added-large-files
+# See https://pre-commit.com for more information
+# See https://pre-commit.com/hooks.html for more hooks
+repos:
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.2.0
     hooks:
-      - id: isort
-        exclude: >
-          (?x)^(
-              .*_pb2.py|
-              .*_pb2.pyi|
-              .*_pb2_grpc.py|
-              .*conanfile.py|
-              .*templates.*.py
-          )$
-
-  - repo: https://github.com/psf/black
-    rev: 23.1.0
-    hooks:
-      - id: black
-        exclude: >
-          (?x)^(
-              .*_pb2.py|
-              .*_pb2.pyi|
-              .*_pb2_grpc.py|
-              .*conanfile.py|
-              .*templates.*.py
-          )$
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
-    hooks:
-      - id: flake8
-        exclude: >
-          (?x)^(
-              .*_pb2.py|
-              .*_pb2.pyi|
-              .*_pb2_grpc.py|
-              .*conanfile.py|
-              .*templates.*.py
-          )$
-        additional_dependencies:
-          - flake8-bugbear
-          - flake8-unused-arguments
-
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.4
-    hooks:
-      - id: bandit
-        args: ["--skip=B101,B404,B603,B607"]
-        types_or: [python]
-        exclude: test
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.0.1"
-    hooks:
-      - id: mypy
-        args: [--strict, --ignore-missing-imports, --exclude=conanfile.py, --exclude=.*templates.*.py, vehicle-model-lifecycle/src, grpc-interface-support/src]
-        language: system
-        pass_filenames: false
-
-  - repo: https://github.com/pycqa/pydocstyle
-    rev: 6.3.0
-    hooks:
-      - id: pydocstyle
+    -   id: trailing-whitespace
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+    -   id: check-added-large-files
