--- a/.github/workflows/check-devcontainer.yml
+++ b/.github/workflows/check-devcontainer.yml
@@ -19,7 +19,7 @@ on:
   push:
     # Run only on branches/commits and not tags
     branches:
-      - devContainerSetup
+      - main
   pull_request:
     branches:
       - main
