--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
-    "name": "Vehicle App Template",
-    "image": "ghcr.io/eclipse-velocitas/devcontainer-base-images/base:v0.2",
-    "remoteUser": "vscode",
-    "postCreateCommand": "bash .devcontainer/scripts/postCreateCommand.sh"
+	"name": "Vehicle App Template",
+	"image": "ghcr.io/eclipse-velocitas/devcontainer-base-images/base:v0.2",
+	"remoteUser": "vscode",
+	"onCreateCommand": "bash .devcontainer/scripts/onCreateCommand.sh",
+	"postStartCommand": "velocitas create"
 }
