add values in ci

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,5 +15,5 @@
         }
     },
     "onCreateCommand": "bash .devcontainer/scripts/onCreateCommand.sh",
-    "postStartCommand": "velocitas create"
+    "postStartCommand": "bash .devcontainer/scripts/postStartCommand.sh"
 }
