--- a/.github/workflows/check-devcontainer.yml
+++ b/.github/workflows/check-devcontainer.yml
@@ -43,3 +43,4 @@ jobs:
         with:
           runCmd: |
             velocitas --version
+          env: VELOCITAS_CREATE_VALUES="-n test -l python"
