--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,18 @@
     "name": "Vehicle App Template",
     "image": "ghcr.io/eclipse-velocitas/devcontainer-base-images/base:v0.2",
     "remoteUser": "vscode",
-    "postCreateCommand": "bash .devcontainer/scripts/postCreateCommand.sh"
+    "customizations": {
+        "vscode": {
+            "settings": {
+                "terminal.integrated.defaultProfile.linux": "zsh",
+                "terminal.integrated.profiles.linux": {
+                    "zsh": {
+                        "path": "/usr/bin/zsh"
+                    }
+                }
+            }
+        }
+    },
+    "onCreateCommand": "bash .devcontainer/scripts/onCreateCommand.sh",
+    "postStartCommand": "bash .devcontainer/scripts/postStartCommand.sh"
 }
