--- a/.github/workflows/check-devcontainer.yml
+++ b/.github/workflows/check-devcontainer.yml
@@ -1,4 +1,4 @@
-# Copyright (c) 2023 Robert Bosch GmbH
+# Copyright (c) 2023 Contributors to the Eclipse Foundation
 #
 # This program and the accompanying materials are made available under the
 # terms of the Apache License, Version 2.0 which is available at
@@ -33,10 +33,13 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Setup python
+        uses: actions/setup-python@v4
 
       - name: Run Linters
-        uses: ./.github/actions/pre-commit-action
+        uses: pre-commit/action@v3.0.0
 
       - name: Build devcontainer
         uses: devcontainers/ci@v0.3
