--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,33 +15,35 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
-    - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v3.2.0
-      hooks:
-          - id: trailing-whitespace
-          - id: end-of-file-fixer
-          - id: check-yaml
-          - id: check-added-large-files
-    - repo: https://github.com/Lucas-C/pre-commit-hooks
-      rev: v1.5.4
-      hooks:
-          - id: insert-license
-            files: '.*\.(proto|js|ts)$'
-            args:
-                - --license-filepath
-                - license_header.txt
-                - --comment-style
-                - "//"
-                - --use-current-year
-                - --allow-past-years
-                - --skip-license-insertion-comment=This file is maintained by velocitas CLI, do not modify manually.
-          - id: insert-license
-            files: '.*\.(py|yml|yaml|sh)$'
-            args:
-                - --license-filepath
-                - license_header.txt
-                - --comment-style
-                - "#"
-                - --use-current-year
-                - --allow-past-years
-                - --skip-license-insertion-comment=This file is maintained by velocitas CLI, do not modify manually.
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.2.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.5.4
+    hooks:
+      - id: forbid-crlf
+      - id: remove-crlf
+      - id: insert-license
+        files: '.*\.(proto|js|ts)$'
+        args:
+          - --license-filepath
+          - license_header.txt
+          - --comment-style
+          - "//"
+          - --use-current-year
+          - --allow-past-years
+          - --skip-license-insertion-comment=This file is maintained by velocitas CLI, do not modify manually.
+      - id: insert-license
+        files: '.*\.(py|yml|yaml|sh)$'
+        args:
+          - --license-filepath
+          - license_header.txt
+          - --comment-style
+          - "#"
+          - --use-current-year
+          - --allow-past-years
+          - --skip-license-insertion-comment=This file is maintained by velocitas CLI, do not modify manually.
