Fix devcontainer test
Signed-off-by: Dennis Meister <dennis.meister@bosch.com>

--- a/.github/workflows/check-devcontainer.yml
+++ b/.github/workflows/check-devcontainer.yml
@@ -46,4 +46,4 @@ jobs:
         with:
           runCmd: |
             velocitas --version
-          env: VELOCITAS_CREATE_ARGS=-n test -l python
+          env: VELOCITAS_CREATE_ARGS=-n test -c vapp-core-python
